ingress/infisical-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical-ingress
  namespace: infisical
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: "infisical.cluster.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical-infisical-standalone-infisical
                port:
                  number: 8080
