ingress/kargo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kargo
  namespace: kargo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kargo.cluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kargo-api
                port:
                  number: 80
